--- a/Clynical/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Clynical/Views/Storyboards/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XbL-Xa-Wpz">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
@@ -83,21 +83,62 @@
             </objects>
             <point key="canvasLocation" x="-23" y="1227"/>
         </scene>
-        <!--Meds View Controller-->
+        <!--Med Reminders-->
         <scene sceneID="5Gm-A5-tKq">
             <objects>
-                <viewController id="85j-f9-hp7" customClass="MedsViewController" customModule="Clynical" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="medsView" id="85j-f9-hp7" customClass="MedsViewController" customModule="Clynical" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="u5P-9u-u9I">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="3TV-s2-UHc">
+                                <rect key="frame" x="0.0" y="140" width="414" height="673"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="xxX-ZN-L5P"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="3TV-s2-UHc" firstAttribute="top" secondItem="xxX-ZN-L5P" secondAttribute="top" id="Nnm-Bx-buS"/>
+                            <constraint firstItem="xxX-ZN-L5P" firstAttribute="trailing" secondItem="3TV-s2-UHc" secondAttribute="trailing" id="sIv-bG-M9G"/>
+                            <constraint firstItem="xxX-ZN-L5P" firstAttribute="bottom" secondItem="3TV-s2-UHc" secondAttribute="bottom" id="tnK-Nw-1I2"/>
+                            <constraint firstItem="3TV-s2-UHc" firstAttribute="leading" secondItem="xxX-ZN-L5P" secondAttribute="leading" id="uQc-Fx-6Qw"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="iBy-us-aPv"/>
+                    <navigationItem key="navigationItem" title="Med Reminders" id="iBy-us-aPv">
+                        <barButtonItem key="leftBarButtonItem" title="Test" id="eGI-XB-F13">
+                            <connections>
+                                <action selector="didTapTest" destination="85j-f9-hp7" id="9o6-ha-MkP"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="plus" catalog="system" id="iFp-Cm-Vlm">
+                            <connections>
+                                <action selector="didTapAdd" destination="85j-f9-hp7" id="d8c-dB-Wsy"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="table" destination="3TV-s2-UHc" id="gxt-YM-Wez"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pzR-eX-0RG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2030" y="1227"/>
+        </scene>
+        <!--Add Med View Controller-->
+        <scene sceneID="mOk-TR-Xrr">
+            <objects>
+                <viewController storyboardIdentifier="addMedView" id="Vmp-59-3Pm" customClass="AddMedViewController" customModule="Clynical" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bPW-rN-Pgi">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="XAk-Ya-RzO"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z0L-j4-dAu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2030" y="1889"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="aV4-vG-CER">
@@ -121,8 +162,8 @@
             <objects>
                 <navigationController id="Svt-d9-mKF" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="" image="pills.fill" catalog="system" id="GBu-nD-0Qh"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Zdx-Sf-hpP">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="Zdx-Sf-hpP">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -183,6 +224,7 @@
         <image name="book.closed.fill" catalog="system" width="115" height="128"/>
         <image name="house.fill" catalog="system" width="128" height="106"/>
         <image name="pills.fill" catalog="system" width="128" height="106"/>
+        <image name="plus" catalog="system" width="128" height="113"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
