--- a/Clynical/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Clynical/Views/Storyboards/Base.lproj/Main.storyboard
@@ -92,8 +92,34 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="3TV-s2-UHc">
-                                <rect key="frame" x="0.0" y="140" width="414" height="673"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="8PB-G6-EKq" detailTextLabel="L6M-z4-206" style="IBUITableViewCellStyleSubtitle" id="n5Q-9L-dLE">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="n5Q-9L-dLE" id="lDx-I9-Doa">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8PB-G6-EKq">
+                                                    <rect key="frame" x="20" y="6" width="25" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="L6M-z4-206">
+                                                    <rect key="frame" x="20" y="22.5" width="40.5" height="13.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="xxX-ZN-L5P"/>
@@ -132,13 +158,47 @@
                     <view key="view" contentMode="scaleToFill" id="bPW-rN-Pgi">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HQL-DU-Jpy">
+                                <rect key="frame" x="20" y="136" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bmo-Gp-vc4">
+                                <rect key="frame" x="20" y="178" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="tDB-3q-mE2">
+                                <rect key="frame" x="0.0" y="220" width="414" height="208"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="208" id="k3X-u1-Rml"/>
+                                </constraints>
+                            </datePicker>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="XAk-Ya-RzO"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Bmo-Gp-vc4" firstAttribute="top" secondItem="HQL-DU-Jpy" secondAttribute="bottom" constant="8" id="54D-m0-Qcy"/>
+                            <constraint firstItem="HQL-DU-Jpy" firstAttribute="trailing" secondItem="Bmo-Gp-vc4" secondAttribute="trailing" id="DqG-Cf-zeg"/>
+                            <constraint firstItem="HQL-DU-Jpy" firstAttribute="top" secondItem="XAk-Ya-RzO" secondAttribute="top" constant="92" id="TpK-Le-Hxu"/>
+                            <constraint firstItem="HQL-DU-Jpy" firstAttribute="trailing" secondItem="bPW-rN-Pgi" secondAttribute="trailingMargin" id="X2I-lQ-OlY"/>
+                            <constraint firstItem="tDB-3q-mE2" firstAttribute="centerX" secondItem="Bmo-Gp-vc4" secondAttribute="centerX" id="fgV-KF-aZk"/>
+                            <constraint firstItem="tDB-3q-mE2" firstAttribute="leading" secondItem="XAk-Ya-RzO" secondAttribute="leading" id="hzB-gk-TJw"/>
+                            <constraint firstItem="HQL-DU-Jpy" firstAttribute="leading" secondItem="bPW-rN-Pgi" secondAttribute="leadingMargin" id="vPs-7o-KmT"/>
+                            <constraint firstItem="tDB-3q-mE2" firstAttribute="top" secondItem="Bmo-Gp-vc4" secondAttribute="bottom" constant="8" id="xdW-Jx-xRK"/>
+                            <constraint firstItem="HQL-DU-Jpy" firstAttribute="leading" secondItem="Bmo-Gp-vc4" secondAttribute="leading" id="xlb-KV-WVc"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bodyField" destination="Bmo-Gp-vc4" id="Ukn-vH-IUj"/>
+                        <outlet property="datePicker" destination="tDB-3q-mE2" id="39C-WU-bug"/>
+                        <outlet property="titleField" destination="HQL-DU-Jpy" id="hdq-WE-fMe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="z0L-j4-dAu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2030" y="1889"/>
+            <point key="canvasLocation" x="-2030.4347826086957" y="1888.3928571428571"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="aV4-vG-CER">
